[package]
name = "hexpass-generator-core"
version = "1.0.0"
edition = "2018"
authors = ["HexPass <dev@hexpass.com>"]
description = "The core implementation of HexPass Generator."
license = "LGPL-2.1-only"
repository = "https://github.com/hexpass/generator-core"

[lib]
crate-type = ["cdylib"]

[dependencies]
sha2 = "0.10.1"
hmac = "0.12.0"
wasm-bindgen = "0.2"

[profile.release]
lto = true
